# Human-action-prioritizer

./: .gitignore
Services/plan_creator/: main.py  pyproject.toml
Services/prioritizer/: .gitignore  main.py  pyproject.toml
Services/prioritizer/src/prioritizer/: main.py  models.py  settings.py
Services/prioritizer/src/prioritizer/data/: actions.json  actions.xlsx  synthetic_profiles.json
Services/prioritizer/src/prioritizer/ml/model/: action_prioritization_model.joblib
Services/prioritizer/src/prioritizer/ml/notebooks/: train_ranker.ipynb
Services/prioritizer/src/prioritizer/prompts/: generate_synthetic_action_pair_scoring.py  generate_synthetic_profile.py
Services/prioritizer/src/prioritizer/rag/: ingest.py  retriever.py
Services/prioritizer/src/prioritizer/scripts/: action_loader.py  iter_combo.py  mirror_scores.py
data/documents/drawdown/: deploy-alternative-insulation-materials.txt  deploy-alternative-refrigerants.txt  deploy-clean-cooking.txt  deploy-led-lighting.txt  deploy-offshore-wind-turbines.txt  deploy-onshore-wind-turbines.txt  deploy-silvopasture.txt  enhance-public-transit.txt  improve-annual-cropping.txt  improve-cement-production-alternative-fuels.txt  improve-cement-production-clinker-substitution.txt  improve-cement-production-efficiency-upgrades.txt  improve-diets.txt  improve-landfill-management-biocovers.txt  improve-landfill-management-methane-capture.txt  improve-nonmotorized-transportation.txt  improve-nutrient-management.txt  improve-rice-production.txt  improve-windows-glass.txt  (+33 more)
scripts/: scrape_drawdown.py  scrape_wiki.py
(+54 files in other folders)
