[project]
name = "plan-creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]

[build-system]                                                                                                                                                                    
  requires = ["hatchling"]                                                                                                                                                          
  build-backend = "hatchling.build"  w