[project]
name = "prioritizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.0",
    "fastapi>=0.129.0",
    "langchain>=1.2.10",
    "langchain-text-splitters>=1.1.0",
    "openai>=2.21.0",
    "openpyxl>=3.1.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
